--- a/flamethrower.cabal
+++ b/flamethrower.cabal
@@ -1,5 +1,5 @@
 name:                flamethrower
-version:             0.0.1.1
+version:             0.0.1.2
 synopsis:            A template engine for HTML
 description:
     Flamethrower is a simpler indentation-based template language for HTML.
@@ -7,20 +7,22 @@ description:
     It’s intended to be a port of <https://github.com/charmander/razorleaf Razor Leaf>,
     but it has quite a ways to go before reaching that status.
     .
-    >(-# LANGUAGE QuasiQuotes #-) -- Parentheses here should be curly braces
-    >
-    >import Flamethrower
-    >
-    >render name = [flamethrower|
-    >p id: "greeting"
-    >    "Hello, "
-    >    em "#(name)" # Parentheses here should be curly braces
-    >    "!"
-    >|]
-    >
-    >main = putStrLn (render "world")
-    >
-    >-- <p id="greeting">Hello, <em>world</em>!</p>
+    @
+    &#123;&#35;- LANGUAGE QuasiQuotes -&#35;&#125;
+    .
+    import Flamethrower
+    .
+    render name = [flamethrower|
+    p id: &#34;greeting&#34;
+        &#32;&#32;&#32;&#32;&#34;Hello, &#34;
+        &#32;&#32;&#32;&#32;em &#34;&#35;&#123;name&#125;&#34;
+        &#32;&#32;&#32;&#32;&#34;!&#34;
+    |]
+    .
+    main = putStrLn (render &#34;world&#34;)
+    .
+    &#45;&#45; &#60;p id=&#34;greeting&#34;&#62;Hello, &#60;em&#62;world&#60;&#47;em&#62;!&#60;&#47;p&#62;
+    @
 homepage:            https://charmander.me/flamethrower/
 license:             MIT
 license-file:        LICENSE
