--- a/flamethrower.cabal
+++ b/flamethrower.cabal
@@ -1,5 +1,5 @@
 name:                flamethrower
-version:             0.0.1.2
+version:             0.0.1.3
 synopsis:            A template engine for HTML
 description:
     Flamethrower is a simpler indentation-based template language for HTML.
@@ -28,7 +28,7 @@ license:             MIT
 license-file:        LICENSE
 author:              Charmander
 maintainer:          campersander@gmail.com
-category:            Text
+category:            Text, HTML, Web
 build-type:          Simple
 cabal-version:       >=1.10
 stability:           alpha
