--- a/flamethrower.cabal
+++ b/flamethrower.cabal
@@ -1,5 +1,5 @@
 name:                flamethrower
-version:             0.0.2.0
+version:             0.0.2.1
 synopsis:            A template engine for HTML
 description:
     Flamethrower is a simpler indentation-based template language for HTML.
@@ -8,21 +8,26 @@ description:
     but it has quite a ways to go before reaching that status.
     .
     @
-    &#123;&#35;- LANGUAGE QuasiQuotes -&#35;&#125;
+    &#123;-&#35; LANGUAGE QuasiQuotes &#35;-&#125;
+    &#123;-&#35; LANGUAGE OverloadedStrings &#35;-&#125;
     .
     import Flamethrower
+    import Flamethrower.Escape
+    import Data.Text
+    import qualified Data.Text.IO
     .
     render name = [flamethrower|
     p id: &#34;greeting&#34;
-        &#32;&#32;&#32;&#32;&#34;Hello, &#34;
-        &#32;&#32;&#32;&#32;em &#34;&#35;&#123;name&#125;&#34;
-        &#32;&#32;&#32;&#32;&#34;!&#34;
+        &#9;&#34;Hello, &#34;
+        &#9;em &#34;&#35;&#123;name&#125;&#34;
+        &#9;&#34;!&#34;
     |]
     .
-    main = putStrLn (render &#34;world&#34;)
+    main = Data.Text.IO.putStrLn (render &#34;world&#34;)
     .
     &#45;&#45; &#60;p id=&#34;greeting&#34;&#62;Hello, &#60;em&#62;world&#60;&#47;em&#62;!&#60;&#47;p&#62;
     @
+
 homepage:            https://charmander.me/flamethrower/
 license:             MIT
 license-file:        LICENSE
