--- a/flamethrower.cabal
+++ b/flamethrower.cabal
@@ -1,5 +1,5 @@
 name:                flamethrower
-version:             0.0.3.1
+version:             0.0.4.0
 synopsis:            A template engine for HTML
 description:
     Flamethrower is a simpler indentation-based template language for HTML.
@@ -11,8 +11,8 @@ description:
     &#123;-&#35; LANGUAGE QuasiQuotes &#35;-&#125;
     &#123;-&#35; LANGUAGE OverloadedStrings &#35;-&#125;
     .
-    import Flamethrower
-    import Flamethrower.Escape
+    import Text.Flamethrower
+    import Text.Flamethrower.Escape
     import Data.Text
     import qualified Data.Text.IO
     .
@@ -43,7 +43,6 @@ source-repository head
     location: https://github.com/charmander/flamethrower
 
 library
-    exposed-modules:     Flamethrower, Flamethrower.Parser, Flamethrower.Lexer, Flamethrower.Compiler, Flamethrower.Escape
-    other-extensions:    NamedFieldPuns
+    exposed-modules:     Text.Flamethrower, Text.Flamethrower.Escape
     build-depends:       base >=4.7 && <4.8, template-haskell >=2.9 && <2.10, haskell-src-meta >=0.6 && <0.7, text >=1.1.0.0 && <1.2
     default-language:    Haskell2010
