--- a/flamethrower.cabal
+++ b/flamethrower.cabal
@@ -1,5 +1,5 @@
 name:                flamethrower
-version:             0.0.4.1
+version:             0.0.5.0
 synopsis:            A template engine for HTML
 description:
     Flamethrower is a simpler indentation-based template language for HTML.
@@ -42,5 +42,5 @@ source-repository head
 
 library
     exposed-modules:     Text.Flamethrower, Text.Flamethrower.Escape
-    build-depends:       base >=4.7 && <4.8, template-haskell >=2.9 && <2.10, haskell-src-meta >=0.6 && <0.7, text >=1.2.0.0 && <1.3
+    build-depends:       base >=4.7 && <4.8, template-haskell >=2.9 && <2.10, text >=1.2.0.0 && <1.3
     default-language:    Haskell2010
