--- a/flamethrower.cabal
+++ b/flamethrower.cabal
@@ -1,5 +1,5 @@
 name:                flamethrower
-version:             0.0.5.0
+version:             0.0.5.1
 synopsis:            A template engine for HTML
 description:
     Flamethrower is a simpler indentation-based template language for HTML.
@@ -41,6 +41,6 @@ source-repository head
     location: https://github.com/charmander/flamethrower
 
 library
-    exposed-modules:     Text.Flamethrower, Text.Flamethrower.Escape
+    exposed-modules:     Text.Flamethrower, Text.Flamethrower.Escape, Text.Flamethrower.Compiler, Text.Flamethrower.Parser, Text.Flamethrower.Lexer
     build-depends:       base >=4.7 && <4.8, template-haskell >=2.9 && <2.10, text >=1.2.0.0 && <1.3
     default-language:    Haskell2010
